--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -2,7 +2,7 @@ name: Sync Fork
 
 on:
   schedule:
-    - cron: "0 2 * * *"  # 每天凌晨 2 点（UTC）
+    - cron: "0 2 * * *"
   workflow_dispatch:
 
 jobs:
@@ -29,31 +29,36 @@ jobs:
       - name: Sync main
         run: |
           echo "🔄 Sync main"
-          git checkout main
-          git merge upstream/main --no-edit || true
+
+          # 明确从 origin/main 创建或更新本地 main，避免 ambiguous
+          git checkout -B main origin/main
+
+          # 合并 upstream/main
+          git merge --no-edit upstream/main || true
+
+          # 推送更新后的 main
           git push origin main
 
-      - name: Sync all other branches
+      - name: Sync other branches
         run: |
           echo "🔄 Syncing other branches..."
 
-          # 获取所有 upstream 分支名（不包含 HEAD）
+          # 获取所有 upstream 分支名
           for branch in $(git branch -r | grep 'upstream/' | grep -v 'HEAD' | sed 's|upstream/||'); do
-
             if [ "$branch" = "main" ]; then
               continue
             fi
 
             echo "➡️ Sync branch: $branch"
 
-            # 本地分支存在则 checkout，否则创建
+            # 明确基于 origin/<branch> 创建或更新本地分支
             if git show-ref --verify --quiet refs/heads/$branch; then
               git checkout $branch
             else
-              git checkout -b $branch
+              git checkout -b $branch origin/$branch 2>/dev/null || git checkout -b $branch
             fi
 
-            # 合并上游分支
+            # 同步 upstream 到本地
             git merge upstream/$branch --no-edit || true
 
             # 推送
@@ -71,8 +76,7 @@ jobs:
             git checkout -b actions-branch
           fi
 
-          # 合并 main 到 actions-branch
-          git merge origin/main --no-edit || true
+          # 合并 main
+          git merge main --no-edit || true
 
-          # 推送
           git push origin actions-branch
