--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -4,20 +4,24 @@ on:
   push:
     branches:
       - actions-branch
-  workflow_dispatch:       # 允许手动触发
+  workflow_dispatch:
 
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check if there are new commits
+      - name: 检查是否有新的提交
         run: |
           if [ "${{ github.event.before }}" == "${{ github.event.after }}" ]; then
             echo "没有新的提交，可能是空推送或未变更"
             exit 0
-          else
-            echo "检测到新的提交，继续执行"
           fi
+          echo "检测到新的提交，继续执行"
+
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -27,8 +31,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push
+      - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
+          context: .                      # 你的 Dockerfile 所在目录
+          file: ./Dockerfile              # 可以省略，使用默认
           push: true
-          tags: ${{ vars.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:latest
+          tags: |
+            ${{ vars.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:latest
