--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -1,4 +1,4 @@
-name: Build and push Docker image
+name: Build and push Docker image (Production)
 
 on:
   push:
@@ -10,32 +10,49 @@ jobs:
   build_and_push:
     runs-on: ubuntu-latest
 
-    steps:
-      - name: 检查是否有新的提交
-        run: |
-          if [ "${{ github.event.before }}" == "${{ github.event.after }}" ]; then
-            echo "没有新的提交，可能是空推送或未变更"
-            exit 0
-          fi
-          echo "检测到新的提交，继续执行"
+    permissions:
+      contents: read
+      packages: write
 
+    steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 登录 Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # 启用 Buildx（支持缓存 / 多架构）
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # 生成标准化镜像元数据
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            ${{ vars.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}
+          tags: |
+            type=raw,value=latest
+            type=sha,format=short
+            type=ref,event=branch
+          labels: |
+            org.opencontainers.image.source=${{ github.repository }}
+            org.opencontainers.image.revision=${{ github.sha }}
+
+      # 构建并推送（带缓存）
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
-          context: .                      # 你的 Dockerfile 所在目录
-          file: ./Dockerfile              # 可以省略，使用默认
+          context: .
+          file: ./Dockerfile
           push: true
-          tags: |
-            ${{ vars.DOCKER_USERNAME }}/${{ vars.IMAGE_NAME }}:latest
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
